--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "scripts": {
+    "build": "rm -rf dist && parcel build src/index.html --no-minify --public-url ./"
+  },
   "devDependencies": {
     "cssnano": "^4.1.10"
-  }
+  },
+  "name": "nav-1",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:essie-wen/nav-20191204.git",
+  "author": "Essie <283135364@qq.com>",
+  "license": "MIT"
 }
